--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
     <string name="app_name">Unit Converter</string>
+    <string name="submit">Submit</string>
+    <string name="textview">TextView</string>
+    <string name="enter_the_value_in_kg">Enter the value (in Kg)</string>
+    <string name="todo">TODO</string>
+    <string name="space" />
 </resources>
